# sp1-simple-examples

./: README.md
SP1_age_verifier_backend_and_gui/: README.md
SP1_age_verifier_example/: Cargo.toml  README.md  input.json
SP1_age_verifier_example/elf/: SP1_age_verifier_example
SP1_age_verifier_example/src/: generate_input.rs  main.rs
sp1_addition/: Cargo.toml  README.md
sp1_addition/elf/: sp1_addition
sp1_addition/src/: main.rs
sp1_general_proof/: Cargo.toml
sp1_general_proof/src/: main.rs
verify_age_example/: Cargo.toml  input.json  proof.json
verify_age_example/elf/: riscv32im-succinct-zkvm-elf  sp1_proof_example
verify_age_example/src/: generate_input.rs  main.rs
