[package]
name = "SP1_age_verifier_example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sp1-zkvm = "3.0.0-rc4"   # Use the latest release candidate

[[bin]]
name = "generate_input"
path = "src/generate_input.rs"

