[package]
name = "sp1_proof_example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sp1-zkvm = "3.0.0-rc4"   # Use the latest release candidate
bincode = "1.3"  # Add this line for binary serialization/deserialization
serde_json = "1.0" # Reading JSON input.

[[bin]]
name = "generate_input"
path = "src/generate_input.rs"
